<resources
    xmlns:tools="http://schemas.android.com/tools" >
    <string name="app_name">GAIA测试</string>
    <string name="empty_content_description" />
    <string name="button_ok">OK</string>
    <string name="button_connect">CONNECT</string>
    <string name="button_connect_ble">CONNECT BLE</string>
    <string name="button_connect_br_edr">CONNECT BR/EDR</string>
    <string name="button_disconnect">DISCONNECT</string>
    <string name="button_start_upgrade">START UPGRADE</string>
    <string name="button_previous">PREVIOUS</string>
    <string name="button_abort">ABORT</string>
    <string name="button_continue">CONTINUE</string>
    <string name="button_reset">RESET</string>
    <string name="button_choose">CHOOSE</string>
    <string name="button_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="alert_permissions_title">Permissions required</string>
    <string name="alert_permissions_message">Please enable Location permission which is required to scan for
        LE devices.</string>
    <string name="alert_no_file_selected_title">No available file</string>
    <string name="alert_no_file_selected_message">There is no file selected or the selected file cannot be retrieved.
        <br/>Please choose another file.</string>
    <string name="alert_not_a_bin_file_title">Not a bin file</string>
    <string name="alert_not_a_bin_file_message">The selected file is not a bin file. This application only supports
        using a bin file for the upgrade.<br/>Please choose another file.</string>
    <string name="alert_file_error_title">File error</string>
    <string name="alert_file_error_message">Error when attempting to retrieve the selected file. Please try
        again or select another one.</string>
    <string name="alert_reconnection_title">Device disconnected</string>
    <string name="alert_reconnection_message">Waiting for reconnection</string>
    <string name="alert_upgrade_complete_title">Upgrade complete</string>
    <string name="alert_upgrade_complete_message">The upgrade has successfully completed.</string>
    <string name="alert_upgrade_low_battery_message">The battery is low on your audio device. Please connect it to a charger.</string>
    <string name="alert_upgrade_low_battery_title">Low battery</string>
    <string name="alert_upgrade_commit_message">The data has been uploaded on the board and the board is ready for
        the commit process. Do you want to commit your upload?</string>
    <string name="alert_upgrade_commit_title">Data commit</string>
    <string name="alert_upgrade_transfer_complete_message">Would you like to proceed?</string>
    <string name="alert_upgrade_transfer_complete_title">File transfer complete</string>
    <string name="alert_upgrade_sync_id_different_message">A previous unfinished upgrade has been processed with a
        different file. By continuing the current upgrade the device will loose all information from that
        previous upgrade.<br/>Do you want to continue?</string>
    <string name="alert_upgrade_sync_id_different_title">File transfer complete</string>
    <string name="toast_not_implemented">Not implemented yet</string>
    <string name="toast_gaia_not_supported">Gaia service not supported</string>
    <string name="toast_not_connected">Device not connected</string>
    <string name="toast_connection_error_failed">Connection has failed</string>
    <string name="toast_connection_error_lost">Connection with device is lost</string>
    <string name="toast_connection_error_unknown">Connection unknown error</string>
    <string name="snack_bar_connected"> Device connected</string>
    <string name="snack_bar_connecting">Connecting to device…</string>
    <string name="snack_bar_disconnecting">Disconnecting from device…</string>
    <string name="snack_bar_disconnected">Device disconnected</string>
    <string name="snack_bar_bonded">Devices are bonded</string>
    <string name="snack_bar_bonding"> Bonding with device…</string>
    <string name="snack_bar_not_bonded">Devices are not bonded</string>
    <string name="snack_bar_application_ready">Application ready</string>
    <string name="snack_bar_gatt_busy">GATT busy: system using it…</string>
    <string name="snack_bar_discovering_gatt_services">Discovering GATT services…</string>
    <string name="snack_bar_discovering_gaia_features">Discovering GAIA features…</string>
    <string name="scanned_devices">SCANNED</string>
    <string name="bonded_devices">BONDED</string>
    <string name="connect_no_available_scanned_device">No devices discovered.<br/>
        Please check that your device is advertising and available and that the Bluetooth is enabled on this
        device.<br/>
        If you are using Android 6 and above, please also check that the Location permission is enabled for this
        application and that the service location is enabled.</string>
    <string name="connect_no_available_paired_device">No paired devices available.</string>
    <string name="device_type_dual">DUAL device</string>
    <string name="device_type_le">Low Energy device</string>
    <string name="device_type_classic">BR/EDR device</string>
    <string name="device_type_unknown">Unknown device type</string>
    <string name="button_equalizer">Equalizer</string>
    <string name="button_led">LED</string>
    <string name="button_tws">TWS</string>
    <string name="button_upgrade">Upgrade</string>
    <string name="button_remote">Remote</string>
    <string name="button_find_device">Find</string>
    <string name="button_proximity">Proximity</string>
    <string name="button_battery_level">Battery</string>
    <string name="button_heart_rate">Heart rate</string>
    <string name="device_state_connected">connected</string>
    <string name="device_state_disconnected">disconnected</string>
    <string name="device_state_connecting">connecting&#8230;</string>
    <string name="device_state_disconnecting">disconnecting&#8230;</string>
    <string name="device_state_bonded">bonded</string>
    <string name="device_state_not_bonded">not bonded</string>
    <string name="device_state_bonding">bonding&#8230;</string>
    <string name="device_state_connection_unknown">connection unknown</string>
    <string name="device_state_bond_unknown">bond unknown</string>
    <string name="text_view_separator">&#160;-&#160;</string>
    <string name="activity_information_name">Device information</string>
    <string name="toast_device_information">Device is&#160;</string>
    <string name="info_name">Device name</string>
    <string name="info_bluetooth_address">Bluetooth address</string>
    <string name="info_rssi_signal">RSSI signal</string>
    <string name="info_battery_level">Battery level</string>
    <string name="info_battery_status">Battery status</string>
    <string name="info_battery_status_in_charge">Charging</string>
    <string name="info_battery_status_no_charge">Not charging</string>
    <string name="info_api_version">API version</string>
    <string name="info_no_title" />
    <string name="info_not_supported">not supported</string>
    <string name="activity_remote_name">Remote control</string>
    <string name="toast_remote_control_not_supported">The remote control feature is not supported</string>
    <string name="activity_tws_name">TWS</string>
    <string name="tws_right_channel">Right channel</string>
    <string name="tws_left_channel">Left channel</string>
    <string name="tws_stereo">Stereo</string>
    <string name="tws_mono">Mono</string>
    <string name="tws_master">Master speaker</string>
    <string name="tws_slave">Slave speaker</string>
    <string name="activity_equalizer_name">Equalizer</string>
    <string name="switch_bass">Bass boost</string>
    <string name="info_bass_boost_unsupported">Feature Bass Boost unsupported</string>
    <string name="switch_3d">3D</string>
    <string name="info_3D_unsupported">Feature 3D unsupported</string>
    <string name="switch_presets">Presets</string>
    <string name="info_custom_unsupported">Feature equalizer customization unsupported</string>
    <string name="equalizer_general_settings">General Settings</string>
    <string name="preset_0">Bank 0</string>
    <string name="preset_1">Bank 1</string>
    <string name="preset_2">Bank 2</string>
    <string name="preset_3">Bank 3</string>
    <string name="preset_4">Bank 4</string>
    <string name="preset_5">Bank 5</string>
    <string name="preset_6">Bank 6</string>
    <string name="button_configure">CONFIGURE</string>
    <string name="activity_custom_equalizer_name">Customize bank 1</string>
    <string name="action_refresh_equalizer">Refresh values</string>
    <string name="master_gain_title">Master gain</string>
    <string name="bands_title">Bands</string>
    <string name="filter_type_title">Filter type</string>
    <string name="lpf1_name">LPF1</string>
    <string name="lpf2_name">LPF2</string>
    <string name="apf1_name">APF1</string>
    <string name="apf2_name">APF2</string>
    <string name="hpf1_name">HPF1</string>
    <string name="hpf2_name">HPF2</string>
    <string name="ls1_name">LS1</string>
    <string name="ls2_name">LS2</string>
    <string name="tilt1_name">Tilt1</string>
    <string name="tilt2_name">Titl2</string>
    <string name="hs1_name">HS1</string>
    <string name="hs2_name">HS2</string>
    <string name="peq_name">PEQ</string>
    <string name="bypass_name">BYPASS</string>
    <string name="band1_name">band 1</string>
    <string name="band2_name">band 2</string>
    <string name="band3_name">band 3</string>
    <string name="band4_name">band 4</string>
    <string name="band5_name">band 5</string>
    <string name="frequency_title">F</string>
    <string name="gain_title">G</string>
    <string name="quality_title">Q</string>
    <string name="dialog_incorrect_state_title">Board incorrect state</string>
    <string name="dialog_incorrect_state_message">Please stream some music to use this feature.</string>
    <string name="customization_not_supported">The application is not able to set up the connected device.</string>
    <string name="activity_upgrade_name">Upgrade</string>
    <string name="warning_upgrade_not_supported">The upgrade feature is not supported by the device.</string>
    <string name="block_file_title">File</string>
    <string name="block_le_title">LE</string>
    <string name="parameter_mtu_title">MTU size</string>
    <string name="parameter_mtu_message">Only works with compatible devices</string>
    <string name="block_rwcp_title">RWCP</string>
    <string name="parameter_rwcp_title">Use RWCP</string>
    <string name="parameter_rwcp_message">Increases the file upload speed.</string>
    <string name="parameter_rwcp_initial_window_title">Initial window size</string>
    <string name="parameter_rwcp_initial_window_message">Set up the initial window size when starting the
        transfer.</string>
    <string name="parameter_rwcp_maximum_window_title">Maximum window size</string>
    <string name="parameter_rwcp_maximum_window_message">Set up the maximum window size during the transfer.</string>
    <string name="block_logs_title">Logs</string>
    <string name="parameter_logs_title">Add DEBUG logs</string>
    <string name="parameter_logs_message">Adds some logs to the Android log system.<br/>This slows down the upgrade
        .</string>
    <string name="toast_mtu_not_supported">MTU is not supported</string>
    <string name="error_size_out_of_range" tools:ignore="PluralsCandidate">The size must be between %1$d and %2$d</string>
    <string name="error_size_not_modifiable">The size cannot be changed, try again later</string>
    <string name="toast_mtu_updated">MTU size updated to </string>
    <string name="toast_mtu_failed">Failed to change the MTU size</string>
    <string name="title_pick_file">Upgrade file</string>
    <string name="message_pick_file_default">Press CHOOSE to pick a file</string>
</resources>